--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <div
             class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3"
           >
-            <img src="img/proj1.jpg" class="w-20 -mt-10" alt="" />
+            <img src="img/proj1.jpg" class="w-20 -mt-10" alt="Website Poster" />
             <h5 class="text-lg font-bold">Office Space Landing Page</h5>
             <p class="text-sm text-darkGrayishBlue">
               A fully mobile responsive website built using React JS and Tailwind CSS, along
@@ -121,7 +121,7 @@
           <div
             class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
           >
-            <img src="img/proj2.jpg" class="w-20 -mt-18" alt="" />
+            <img src="img/proj2.jpg" class="w-20 -mt-18" alt="Website Poster" />
             <h5 class="text-lg font-bold">Shopping Cart for Ecommerce Site</h5>
             <p class="text-sm text-darkGrayishBlue">
               Functional demonstration of a shopping cart front-end app for ecommerce sites, built using
@@ -138,7 +138,7 @@
             class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3"
           >
             
-            <img src="img/proj3.jpg" class="w-20 -mt-10" alt="" />
+            <img src="img/proj3.jpg" class="w-20 -mt-10" alt="Website Poster" />
             <h5 class="text-lg font-bold">Cryptocurrency Listing</h5>
             <p class="text-sm text-darkGrayishBlue">
               Multipage cryptocurrency listing app that ranks 50 coins based on market cap, built using
